--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -10,7 +10,7 @@ android {
     targetSdkVersion 28
     versionCode 1
     versionName "1.0"
-    testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
   }
 
   buildTypes {
@@ -25,11 +25,11 @@ android {
 }
 
 dependencies {
-  implementation "com.android.support:appcompat-v7:28.0.0"
+  implementation 'androidx.appcompat:appcompat:1.0.0'
 
   testImplementation "org.assertj:assertj-core:1.7.1"
   testImplementation 'junit:junit:4.12'
 
-  androidTestImplementation "com.android.support.test.espresso:espresso-core:2.2.2"
-  androidTestImplementation "com.android.support.test:rules:0.5"
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+  androidTestImplementation 'androidx.test:rules:1.1.1'
 }
