--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+  ext.kotlin_version = '1.3.41'
   repositories {
     jcenter()
     maven {
@@ -8,8 +9,9 @@ buildscript {
     google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.6.2'
-    classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+    classpath 'com.android.tools.build:gradle:3.3.2'
+//    classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
