Party with edx2

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: android
 jdk: oraclejdk8
+
+before_install:
+  - pip install --user codecov
 env:
   global:
     - ANDROID_TARGET=android-22
@@ -20,5 +23,7 @@ script:
   - android-wait-for-emulator
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - ./gradlew connectedCheck
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - codecov
