--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 //apply plugin: 'jacoco-android'
-apply plugin: 'jacoco'
+apply from: 'jacoco.gradle'
 
 android {
   compileSdkVersion 28
